--- a/views/board/index.jade
+++ b/views/board/index.jade
@@ -1,5 +1,45 @@
-extends layout
+extends ../layout
 
 block content
-    //- single board
-    .board.fn-clear
+    .col-lg-9
+       .main-board.board.index-board
+        .pub-main.lz-board
+            .single-pub.clearfix
+                .avatar
+                    img(src="http://tp4.sinaimg.cn/1644105187/180/5621090715/1")
+                h4.title
+                    a(href="#") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
+                .author
+                    span.name Turing
+                    span.cat
+                        i.icon-chevron-right
+                        | 深夜杂谈
+                    i.icon-time
+                    |2012-7-17
+            .board-meta.clearfix
+                span.views
+                    i.icon-eye-open
+                    | 23726
+                span.num
+                    i.icon-comment
+                    | 136
+        .pub-main.lz-board
+            .single-pub.clearfix
+                .avatar
+                    img(src="http://tp4.sinaimg.cn/1644105187/180/5621090715/1")
+                h4.title
+                    a(href="#") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
+                .author
+                    span.name Turing
+                    span.cat
+                        i.icon-chevron-right
+                        | 深夜杂谈
+                    i.icon-time
+                    |2012-7-17
+            .board-meta.clearfix
+                span.views
+                    i.icon-eye-open
+                    | 23726
+                span.num
+                    i.icon-comment
+                    | 136
