--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -32,6 +32,10 @@ i {
     float: right;
 }
 
+.fn-hide {
+    display: none;
+}
+
 /* colors */
 @main-color : #444;
 @bg-color : #fff;
@@ -44,19 +48,14 @@ i {
 }
 
 .single-board {
-    background-color: #444;
     border: 1px solid #ddd;
     margin-bottom: 10px;
     min-height: 200px;
-    background-position: 0px 90px;
-    background-repeat: no-repeat;
-    // box-shadow: inset 0px 0px 10px #ddd;
-    .br(4px);
-    .bs();
+    box-shadow: 0px 0px 10px #ddd;
+    background-color: #fff;
+    .br();
     .brief {
         overflow: hidden;
-        margin-left: 10px;
-        box-shadow: 0px 3px 10px #444;
     }
     .name {
         display: block;
@@ -64,14 +63,18 @@ i {
         margin-bottom: 0px;
         margin-left: 12px;
         margin-right: 12px;
-        color: #fff;
+        color: #999;
         line-height: 1.3;
         .meta {
-            padding-left: 10px;
+            padding-top: 10px;
             font-size: 12px;
+            display: block;
             i {
                 padding-left: 12px;
                 color: #999;
+            }
+            i.first {
+                padding-left: 0px;
             }
         }
     }
@@ -84,11 +87,9 @@ i {
     .threads {
         margin: 0px 0px 0px 10px;
         padding: 12px;
-        background-color: #fff;
-        box-shadow: inset 0px 0px 10px #ddd;
-        width: 380px;
         min-height: 200px;
         list-style-type: none;
+        border-left: 1px dashed #ddd;
         li {
             padding: 5px 3px;
             font-size: 12px;
@@ -140,46 +141,54 @@ a {
 
 /* Header */
 header {
-    background-color: #55C1BA;
-    box-shadow: 0px 1px 3px #ddd;
+    // background-color: #55C1BA;
     #ihd {
-        padding: 6px 0;
+        padding-top: 30px;
+        color: #444;
     }
     #logo {
         h1 {
-            margin-top: 5px;
+            margin-top: 0px;
             a {
                 display: block;
                 font-family: 'Berkshire Swash', cursive;
-                color: #fff;
-                font-size: 28px;
+                font-size: 42px;
                 font-weight: normal;
                 text-shadow: 1px 1px 2px #999;
+                color: @key-color;
+                text-shadow: none;
+                span.desc {
+                    font-size: 14px;
+                    padding-left: 10px;
+                    color: #999;
+                }
             }
+        }
+    }
+    .user-nav {
+        list-style-type: none;
+        font-size: 14px;
+        li {
+            display: block;
+            float: left;
+        }
+        a {
+            font-size: 14px !important;
+            display: block;
+            background-color: #fff;
+            padding: 6px 12px;
+            .br(15px);
+            box-shadow: 0px 0px 3px #ddd;
         }
     }
 }
 
-.slogan {
-    margin-top: 12px;
-    .help , .share-btn {
-        float: right;
-        margin-left: 14px;
-        i {
-            color: #fff;
-            font-size: 26px;
-            line-height: 1;
-            margin-top: -2px;
-        }
-    }
-}
 .active-nav {
-    font-size: 14px;
-    color: #fff;
+    font-size: 14px !important;
+    color: #999;
     text-align: left;
     position: relative;
     padding: 5px 35px 5px 10px;
-    .br;
     i {
         font-size: 24px;
         padding-left: 10px;
@@ -570,7 +579,7 @@ header {
 }
 /* cnt */
 #cnt {
-    margin-top: 20px;
+    margin-top: 10px;
 }
 .archive-title {
     font-size: 14px;
@@ -640,8 +649,19 @@ footer {
         padding: 0px 0 20px;
         margin-top: 5px;
         color: #999;
+        font-size: 12px;
         a {
             color: #999;
+            &:hover {
+                color: #000;
+            };
+        }
+        .candy {
+            padding-left: 13px;
+            background: url('/images/candy.png') no-repeat left center;
+        }
+        .powered {
+            text-align: right;
         }
     }
 }
@@ -872,6 +892,13 @@ footer {
     -moz-text-shadow: @arguments;
     -o-text-shadow: @arguments;
 }
+.box() {
+    box-shadow: 0px 0px 10px #ddd;
+    border: 1px solid #ddd;
+    background-color: #fff;
+    padding: 20px;
+    .br();
+}
 
 /* duoshuo */
 
@@ -897,6 +924,18 @@ footer {
     }
     .desc {
         margin-bottom: 20px;
+    }
+    a.signout {
+        padding-right: 6px;
+        font-size: 12px;
+        color: #999;
+    }
+    .avatar-mini {
+        width: 24px;
+        height: 24px;
+        padding: 1px;
+        margin-right: 6px;
+        margin-top: -4px;
     }
 }
 
@@ -932,4 +971,25 @@ footer {
     background-color: #fff;
     margin-bottom: 20px;
     margin-top: 20px;
+}
+
+.mime {
+    background-color: #fff;
+    .br();
+    box-shadow: 0px 0px 10px #ddd;
+    padding: 10px;
+    h3 {
+        margin-bottom: 10px;
+        padding-bottom: 10px;
+        margin-top: 0px;
+        font-size: 16px;
+    }
+}
+
+.thread {
+    .box();
+    margin-bottom: 20px;
+    textarea {
+        height: 200px;
+    }
 }
