--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,15 @@
 extends layout
 
+//- block banner
+//-    .banner.clearfix
+//-         .inner.clearfix.container
+//-            .row
+//-                 .col-lg-9
+//-                     h2.title 唾手即得，只若初见。
+//-                     .desc 为你的博客提供社会化论坛体验，从未如此简单。
+//-                 .col-lg-3
+//-                     .dl-links
+
 block content
    .col-lg-9
      .main-board.board.index-board
