--- a/views/board/index.jade
+++ b/views/board/index.jade
@@ -8,7 +8,7 @@ block content
                 .avatar
                     img(src="http://tp4.sinaimg.cn/1644105187/180/5621090715/1")
                 h4.title
-                    a(href="#") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
+                    a(href="/thread/123") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
                 .author
                     span.name Turing
                     span.cat
@@ -28,7 +28,7 @@ block content
                 .avatar
                     img(src="http://tp4.sinaimg.cn/1644105187/180/5621090715/1")
                 h4.title
-                    a(href="#") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
+                    a(href="/thread/234") 论坛一定要繁琐复杂得什么功能都有？我只想要一个安
                 .author
                     span.name Turing
                     span.cat
