--- a/views/admin/index.jade
+++ b/views/admin/index.jade
@@ -1,8 +1,7 @@
-extends layout
+extends ../layout
 
 block content
-    .main-board.board.index-board.grid_9
-        #admin
-            h3 添加板块
-            h3 管理用户
-            h3 添加帖子
+    #admin
+        h3 添加板块
+        h3 管理用户
+        h3 添加帖子
