--- a/views/board/index.jade
+++ b/views/board/index.jade
@@ -1,8 +1,7 @@
 extends ../layout
 
 block content
-    .col-lg-9
-       .main-board.board.index-board
+    .main-board.board.index-board
         .pub-main.lz-board
             .single-pub.clearfix
                 .avatar
@@ -14,6 +13,7 @@ block content
                     span.cat
                         i.icon-chevron-right
                         | 深夜杂谈
+                        i.icon-star.star
                     i.icon-time
                     |2012-7-17
             .board-meta.clearfix
